--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,17 +6,18 @@
     <title>Miura test</title>
     <meta name="description" content="初めてのホームページ">
     <link rel="stylesheet" href="stylesheets/top.scss">
+    <%# ”後で設定ロゴ入れる”<link rel="icon" type="image/png" href =""> %>
   </head>
 
   <body>
     <div id="home" class="big-bg">      
       <header class="page-header wrapper">
-      <h1><a href='index.html.erb'> <%= image_tag 'kamen.jpg',class: 'logo'%></a></h1>
+        <h1><a href='index.html.erb'> <%= image_tag 'kamen.jpg',class: 'logo'%></a></h1>
         <nav>
             <ul class="main-nav">
-                <li><a href="news.html">News</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="contact.haml">Contact</a></li>
+              <li><%= link_to "News", '/news' %></li>
+              <li><a href="menu.html">Menu</a></li>
+              <li><a href="contact.haml">Contact</a></li>
             </ul>
         </nav>
       </header>
@@ -32,4 +33,3 @@
 
 
 <% link_to "投稿ページ",  new_post_path %>
-<% link_to "top",  posts_top_path%>
