サイドページ編集

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Miura test</title>
     <meta name="description" content="初めてのホームページ">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheets/top.scss">
     <%# ”後で設定ロゴ入れる”<link rel="icon" type="image/png" href =""> %>
   </head>
