--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -64,6 +64,9 @@
           時代の変化に合わせて新しい価値を提供いたします。
       </p>
     </aside>
+    <div class="ad">
+      <%= image_tag 'old.jpg',alt: "住宅" %>
+    </div>
   </div><!-- /.news-contents -->
   <footer>
     <div class ="wrapper">
