--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,6 +6,8 @@
     <title>Miura test</title>
     <meta name="description" content="初めてのホームページ">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <%#↑viewportとは様々なデバイスにおける表示領域のこと。指定をしないとデスクトップの横幅に合わせられる
+    　この記述だけでは足りなくcssにも画面の大きさを指定する必要がある%>
     <link rel="stylesheet" href="stylesheets/top.scss">
     <%# ”後で設定ロゴ入れる”<link rel="icon" type="image/png" href =""> %>
   </head>
