メニューページの作成

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,7 +19,7 @@
         <nav>
             <ul class="main-nav">
               <li><%= link_to "News", '/news' %></li>
-              <li><a href="menu.html">Menu</a></li>
+              <li><%= link_to "menu", '/news/new' %></li>
               <li><a href="contact.haml">Contact</a></li>
             </ul>
         </nav>
