--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -48,6 +48,7 @@ img{
 
 .main-nav li{
   margin-left: 36px;
+  text-shadow:2px 2px 3px white;
 }
 .main-nav a{
   
@@ -218,6 +219,41 @@ article p{
   color: #0bd;
 }
 
+
+/* Menu
+-------------------------*/
+#menu{
+  background-image: url(setubi.jpg);
+  min-height: 100vh;
+}
+.menu-content{
+  max-width: 560px;
+  margin-top: 10%;
+}
+.menu-content .page-title{
+  text-align: center;
+}
+.menu-content p{
+  font-size: 1.125rem;
+  margin: 10px 0 0;
+}
+.grid{
+  display: grid;
+  gap: 26px;
+  grid-template-columns: repeat(auto-fit, minmax(240px,1fr));
+  margin-top: 6%;
+  margin-bottom: 50px;
+}
+.big-box{
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+.big-box img{
+  height: 94%;
+  width: 100%;
+  object-fit: cover;
+}
+
 /*スマホ画面設定
 -------------------------------*/
 @media(max-width: 600px){
@@ -283,7 +319,18 @@ article p{
   .post-cat{
     margin-left: 80px;
   }
+  /* Menu */
+  .menu-content{
+    margin-top: 20%;
+  }
+  .big-box{
+    grid-column: auto;
+    grid-row: auto;
+  }
+  .big-box img {
+    height: 100%;
+  }
 
-
-  
 }
+/*↑↑↑↑↑↑スマホ設定上↑↑↑↑↑↑↑
+-------------------------*/
