--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -17,8 +17,8 @@
           
           <nav>
             <ul class="main-nav">
-                <li><%= link_to "News", '/post/new' %></li>
-                <li><a href="menu.html">Menu</a></li>
+                <li><%= link_to "News", '/news' %></li>
+                <li><%= link_to "menu", '/news/new' %></li>
                 <li><a href="contact.haml">Contact</a></li>
             </ul>
           </nav>
@@ -26,7 +26,7 @@
                
     
         <div class="wrapper">
-            <h2 class="page-title">News</h2>    
+          <h2 class="page-title">News</h2>    
         </div> 
       </div><!--/#news -->  
   </body>
