contactページ完了

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,7 +20,7 @@
             <ul class="main-nav">
               <li><%= link_to "News", '/news' %></li>
               <li><%= link_to "menu", '/news/new' %></li>
-              <li><a href="contact.haml">Contact</a></li>
+              <li><%= link_to "contact", '/news/show' %></li>
             </ul>
         </nav>
       </header>
@@ -28,7 +28,7 @@
       <div class="home-content wrapper">
         <h2 class= "page-title">初めてのホームページMiura!</h2>
           <p>なんとかホームページを作ってみました。</p>
-            <a class ="button" href="menu.html">メニューをみる</a>
+            <a class ="button" href="/posts/new">メニューをみる</a>
       </div><!--/.home-content -->
     </div><!--/#home -->
   </body>
