--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -19,7 +19,7 @@
             <ul class="main-nav">
                 <li><%= link_to "News", '/news' %></li>
                 <li><%= link_to "menu", '/news/new' %></li>
-                <li><a href="contact.haml">Contact</a></li>
+                <li><%= link_to "contact", '/news/show' %></li>
             </ul>
           </nav>
        </header>
