--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -61,7 +61,29 @@
         </div><!-- /.location-map -->        
       </div><!-- wrapper -->
     </section><!-- /#location -->
-</body>   
+
+    <section id="sns">
+      <div class= "wrapper">
+        <div class ="sns-box">
+          <h3 class ="sub-title">Facebook</h3>
+          <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-width="" data-height="315" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/facebook">Facebook</a></blockquote></div>
+        </div>
+      
+      <div class="sns-box">
+      <h3 class ="sub-title">Twitter</h3>
+          <a class="twitter-timeline" data-height="315" href="https://twitter.com/Miura_code?ref_src=twsrc%5Etfw">Tweets by Miura_code</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
+
+    <div class="sns-box">
+      <h3 class ="sub-title">YouTube</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/56VGMXEf-Qs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      </div>
+    </div>
+  </div><!-- /.wrapper -->
+  </section><!-- /#sns -->
+
+</body>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v5.0"></script>   
   <footer>
     <div class ="wrapper">
         <p><small>&copy: 2020 News box</small></p>
