新規登録ページ

--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -71,13 +71,13 @@
       
       <div class="sns-box">
       <h3 class ="sub-title">Twitter</h3>
-          <a class="twitter-timeline" data-height="315" href="https://twitter.com/Miura_code?ref_src=twsrc%5Etfw">Tweets by Miura_code</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a class="twitter-timeline" data-height="350" href="https://twitter.com/39miyagi?ref_src=twsrc%5Etfw">Tweets by 39miyagi</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
 
     <div class="sns-box">
       <h3 class ="sub-title">YouTube</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/56VGMXEf-Qs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      </div>
-    </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bYjrND6tEac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+      </div>
   </div><!-- /.wrapper -->
   </section><!-- /#sns -->
 
