--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -31,7 +31,17 @@
             <a class ="button" href="/posts/new">メニューをみる</a>
       </div><!--/.home-content -->
     </div><!--/#home -->
+      <script>
+  'use strict';
+
+const now = new Date();
+
+const output = `${year}/${month + 1}/{data} ${hour}: ${jin}`;
+document.getElementById('time').textContent = output;
+  </script>
   </body>
+
+
 </html>
 
 
